tests/ui/missing_colon.stderr
error: unexpected end of macro invocation
  --> $DIR/missing_colon.rs:13:5
   |
13 |     json!({ "a" });
   |     ^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate

